--- a/css/style.css
+++ b/css/style.css
@@ -44,10 +44,14 @@ img {
     list-style-type: none;
     padding: 1.8em;
     margin-top: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-around;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
     background-color: #7E996F;
-    box-shadow: 0px 4px 8px rgba(0,0,0,0.5);
+    -webkit-box-shadow: 0px 4px 8px rgba(0,0,0,0.5);
+            box-shadow: 0px 4px 8px rgba(0,0,0,0.5);
 }
 .primary-nav__link {
     color: #fff;
@@ -73,13 +77,23 @@ img {
 .plants-list {
     list-style-type: none;
     padding: 0;
+    display: -ms-flexbox;
+    display: -webkit-box;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: top;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: top;
+        -ms-flex-align: top;
+            align-items: top;
     width: 93%;
     margin: 2em auto;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
 }
 
 .plants-list > .item {
@@ -88,7 +102,8 @@ img {
     margin: 1em;
     background-image:url(../img/retina-wood.png);
     text-align: center;
-    box-shadow: 0px 0px 7px rgba(0,0,0,0.25);
+    -webkit-box-shadow: 0px 0px 7px rgba(0,0,0,0.25);
+            box-shadow: 0px 0px 7px rgba(0,0,0,0.25);
 }
 .plants-list .item-name {
     font-size: 1.5em;
