--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,16 @@ img {
     text-align: center;
     -webkit-box-shadow: 0px 0px 7px rgba(0,0,0,0.25);
             box-shadow: 0px 0px 7px rgba(0,0,0,0.25);
+    -webkit-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+.plants-list > .item:hover {
+    -webkit-box-shadow: 0px 0px 17px rgba(0,0,0,0.77);
+            box-shadow: 0px 0px 17px rgba(0,0,0,0.77);
+    -webkit-transform: scale(1.05);
+        -ms-transform: scale(1.05);
+            transform: scale(1.05);
 }
 .plants-list .item-name {
     font-size: 1.5em;
